# wss_CGAL_python_wrapper

./: .gitignore  CMakeLists.txt  README.md  demo.ipynb  demo.py  install.sh  utils.py  weighted_straight_skeleton.cpp  weighted_straight_skeleton.py
demos/: 1_base.py  2_one_hole.py  3_several_holes.py
